# FormFlow-Studio

./: .dockerignore  .env.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Dockerfile  README.md  TODO-AUDIT-gaps.md  TODO-GAME-DATA-PRODUCT.md  TODO-P0-core.md  TODO-P1-enhance.md  TODO-P2-enterprise.md  TODO.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  research-external-integration-visualization.md  sample-data.csv  test-all-with-inputs.ts  示例员工数据.csv  表单编排框架设计.md
.codex/: RULES.md
cli/: index.mjs
docs/: behavior-event-reference.md  behavior-rule-syntax.md  llm-provider.md  llm-tools-mcp.md  low-friction-form-authoring-plan.md  pgvector.md  plugin-api-spec.md  project-creation-spec.md
e2e/: app.spec.ts
llm-provider/: Dockerfile  pyproject.toml  requirements.txt
llm-provider/proto/: llm_provider.proto
llm-provider/sql/: 001_agent_runs.sql
llm-provider/src/: __main__.py  adapters.py  auth.py  config.py  errors.py  grpc_main.py  grpc_server.py  http_app.py  models.py  plugins.py  run_store.py  runtime.py
llm-provider/tests/: test_adapters.py  test_http.py  test_protocols.py  test_run_store.py  test_runtime.py
nodes/: excel-api-registry.ts  excel-api-types.ts  executor-registry.ts  package-modules.ts  port-types.ts  registry.ts  types.ts
proj_new/: import.ts
python/: describe.py  ml_engine.py  requirements.txt  setup.sh
python-service/: requirements.txt  setup.sh
scripts/: add_keywords.py  generate_example_project.ts  generate_game_company_mock_data.mjs  (+7 more)
(+1282 files in other folders)
