[project]
name = "formflow-llm-provider"
version = "0.1.0"
description = "Protocol-neutral LLM and LangGraph runtime for FormFlow"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.1,<4", "grpcio>=1.82,<2", "grpcio-tools>=1.82,<2", "langgraph>=0.4,<1",
  "pydantic>=2.11,<3", "requests>=2.32,<3", "psycopg[binary,pool]>=3.2,<4",
  "jsonschema>=4.23,<5", "prometheus-client>=0.21,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
